fix box score rendering, use truncated school name in summary box score

--- a/app/assets/stylesheets/base/_tables.scss
+++ b/app/assets/stylesheets/base/_tables.scss
@@ -2,7 +2,6 @@
 
 @mixin table {
   border-collapse: collapse;
-  width: 60%;
   border: 1px solid $black;
 
   caption {
